--- a/data/store-config.json
+++ b/data/store-config.json
@@ -1,9 +1,9 @@
 {
   "storeInfo": {
-    "name": "TOKO SERBAGUNA",
+    "name": "STORE DIGITAL ARH",
     "tagline": "Produk & Voucher Terbaik!",
-    "whatsappNumber": "6285338939606",
-    "minPurchase": 2
+    "whatsappNumber": "6287786861912",
+    "minPurchase": 1
   },
   "voucherInfo": {
     "title": "📋 Informasi Produk",
